Updated and organised the information.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
                     <p>Click <a href="contact.html">here</a> to contact me.</p>
                     <p>I'm a 22 year old argentinian programming student at the UTN FRM
                     (National Technological University, Regional College of Mendoza), eager to learn more about web development
-                    and currently looking for an internship related to that field. I was also a student at the <a href="https://fcen.uncuyo.edu.ar/">National University of Cuyo</a>
-                    in Mendoza (Physics Mayor) between the years 2019 and 2022, but then I switched careers and started
-                    the one I am currently in.</p>
+                    and currently looking for an internship related to that field.</p>
                 </td>
             </tr>
         </table>
@@ -25,7 +23,6 @@
             <li>Watching documentaries on nature and science</li>
             <li>Playing <a href="https://www.instagram.com/fenixlffa/">american flag football</a></li>
             <li>Reading mistery books</li>
-            <li>Learning new languages</li>
         </ul>
         <hr size="2" noshade>
         <h3>Studies</h3>
@@ -33,17 +30,21 @@
             <thead>
                 <tr>
                     <th>Dates</th>
-                    <th>Study</th>
+                    <th>Studies</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>2013-2018</td>
-                    <td>E.S.T.I.M. high school in Malargüe, Mendoza, Argentina</td>
+                    <td>Student at E.S.T.I.M. (high school in Malargüe, Mendoza, Argentina)</td>
                 </tr>
                 <tr>
-                <td>2019-2022</td>
-                <td>Mayor in Physics at UNCuyo (university in Mendoza, Argentina)</td>
+                    <td>2019-2022</td>
+                    <td>Bachelor's degree in Physics at <a href="https://fcen.uncuyo.edu.ar/">National University of Cuyo</a> (FCEN UNCUYO: university in Mendoza, Argentina), unfinished.</td>
+                </tr>
+                <tr>
+                    <td>2022-present</td>
+                    <td>Associate degree in Programming at <a href="https://www4.frm.utn.edu.ar/tecnicatura-superior-programacion/">National Technological University</a> (FRM UTN: university in Mendoza, Argentina)</td>
                 </tr>
             </tbody>
             
@@ -51,6 +52,14 @@
         <hr size="2" noshade>
         <h3>Skills</h3>
         <table cellspacing="10">
+            <tr>
+                <td>Spanish language (native)</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>English language</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
             <tr>
                 <td>Microsoft Office</td>
                 <td>⭐⭐⭐⭐⭐</td>
