Rearranged the information.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </tr>
                 <tr>
                     <td>2019-2022</td>
-                    <td>Bachelor's degree in Physics at <a href="https://fcen.uncuyo.edu.ar/">National University of Cuyo</a> (FCEN UNCUYO: university in Mendoza, Argentina), unfinished.</td>
+                    <td>Bachelor's degree in Physics at <a href="https://fcen.uncuyo.edu.ar/">National University of Cuyo</a> (FCEN UNCUYO: university in Mendoza, Argentina), <strong>unfinished</strong>.</td>
                 </tr>
                 <tr>
                     <td>2022-present</td>
