Added info and modified the website's layout.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,7 @@
             </tr>
         </table>
         <hr size="2" noshade>
-        <h3>Hobbies and Interests</h3>
-        <ul>
-            <li>Watching documentaries on nature and science</li>
-            <li>Playing <a href="https://www.instagram.com/fenixlffa/">american flag football</a></li>
-            <li>Reading mistery books</li>
-        </ul>
-        <hr size="2" noshade>
-        <h3>Studies</h3>
+        <h3>Education</h3>
         <table cellspacing="10">
             <thead>
                 <tr>
@@ -51,32 +44,50 @@
         </table>
         <hr size="2" noshade>
         <h3>Skills</h3>
-        <table cellspacing="10">
+        <table>
             <tr>
-                <td>Spanish language (native)</td>
-                <td>⭐⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-                <td>English language</td>
-                <td>⭐⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-                <td>Microsoft Office</td>
-                <td>⭐⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-                <td>Outlook</td>
-                <td>⭐⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-                <td>HTML 5</td>
-                <td>⭐⭐⭐</td>
-            </tr>
-            <tr>
-                <td>LaTex</td>
-                <td>⭐⭐⭐</td>
+                <td>
+                    <table cellspacing="10">
+                        <tr>
+                            <td>Spanish language (native)</td>
+                            <td>⭐⭐⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>English language</td>
+                            <td>⭐⭐⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>Microsoft Office</td>
+                            <td>⭐⭐⭐⭐⭐</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table cellspacing="10">
+                        <tr>
+                            <td>Outlook</td>
+                            <td>⭐⭐⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>HTML 5</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>LaTex</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                    </table>
+                </td>
             </tr>
         </table>
+        
+        <hr size="2" noshade>
+        <h3>Hobbies and Interests</h3>
+        <ul>
+            <li>Watching documentaries on nature and science</li>
+            <li>Playing <a href="https://www.instagram.com/fenixlffa/">american flag football</a></li>
+            <li>Reading mistery books</li>
+        </ul>
         <hr size="2" noshade>
     </body>
 </html>
